--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div class="inner">
 				<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="logo"><strong>胡赞來</strong> 个人博客</a>
+					<a href="index.html" class="logo"><strong>胡赞来</strong> 个人博客</a>
 					<!-- <ul class="icons">
               <li>
                 <a href="#" class="icon brands fa-twitter"
@@ -55,10 +55,10 @@
 							</h1>
 						</header>
 						<p>
-							欢迎来到我的个人站点。在这里，可以了解到更多关于我的资料。</br>
+							欢迎来到我的个人站点。在这里，可以了解到更多关于我的资料。</br></br>
 							你现在看到的是博客1.0。文章会采用外部链接的方式。
 							之后会逐步转移到本博客，统一风格。</br></br>
-							这是一个很长远的任务，任重而道远。
+							
 						</p>
 						<ul class="actions">
 							<li><a href="#" class="button big">About me</a></li>
