--- a/index copy.html
+++ b/index copy.html
@@ -17,6 +17,33 @@
 				<!-- Header -->
 				<header id="header">
 					<a href="index.html" class="logo"><strong>胡赞来</strong> 个人博客</a>
+					<!-- <ul class="icons">
+              <li>
+                <a href="#" class="icon brands fa-twitter"
+                  ><span class="label">Twitter</span></a
+                >
+              </li>
+              <li>
+                <a href="#" class="icon brands fa-facebook-f"
+                  ><span class="label">Facebook</span></a
+                >
+              </li>
+              <li>
+                <a href="#" class="icon brands fa-snapchat-ghost"
+                  ><span class="label">Snapchat</span></a
+                >
+              </li>
+              <li>
+                <a href="#" class="icon brands fa-instagram"
+                  ><span class="label">Instagram</span></a
+                >
+              </li>
+              <li>
+                <a href="#" class="icon brands fa-medium-m"
+                  ><span class="label">Medium</span></a
+                >
+              </li>
+            </ul> -->
 				</header>
 
 				<!-- Banner -->
@@ -31,10 +58,15 @@
 							欢迎来到我的个人站点。在这里，可以了解到我的知识总结。</br></br>
 							目前是博客1.0。文章会采用外部链接的方式。
 
+
 						</p>
-
+						<!-- <ul class="actions">
+							<li><a href="aboutMe.html" class="button big">About me</a></li>
+						</ul> -->
 					</div>
-
+					<!-- <span class="image object">
+						<img src="images/pic10.jpg" alt="" />
+					</span> -->
 				</section>
 
 				<!-- Section -->
@@ -65,6 +97,30 @@
 								</p>
 							</div>
 						</article>
+						<!-- <article>
+							<span class="icon solid fa-rocket"></span>
+							<div class="content">
+								<h3>技术栈</h3>
+								<p>
+									html、html DOM
+									css、css3
+									js(es6)
+									angular
+								</p>
+							</div>
+						</article>  -->
+
+						<!-- <article>
+							<span class="icon solid fa-signal"></span>
+							<div class="content">
+								<h3>Sed magna finibus</h3>
+								<p>
+									Aenean ornare velit lacus, ac varius enim lorem ullamcorper
+									dolore. Proin aliquam facilisis ante interdum. Sed nulla
+									amet lorem feugiat tempus aliquam.
+								</p>
+							</div>
+						</article> -->
 					</div>
 				</section>
 
@@ -118,7 +174,66 @@
 								<li><a href="#" class="button">More</a></li>
 							</ul>
 						</article>
-
+						<!-- <article>
+							<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+							<h3>Nulla amet dolore</h3>
+							<p>
+								Aenean ornare velit lacus, ac varius enim lorem ullamcorper
+								dolore. Proin aliquam facilisis ante interdum. Sed nulla amet
+								lorem feugiat tempus aliquam.
+							</p>
+							<ul class="actions">
+								<li><a href="#" class="button">More</a></li>
+							</ul>
+						</article>
+						<article>
+							<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+							<h3>Tempus ullamcorper</h3>
+							<p>
+								Aenean ornare velit lacus, ac varius enim lorem ullamcorper
+								dolore. Proin aliquam facilisis ante interdum. Sed nulla amet
+								lorem feugiat tempus aliquam.
+							</p>
+							<ul class="actions">
+								<li><a href="#" class="button">More</a></li>
+							</ul>
+						</article>
+						<article>
+							<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+							<h3>Sed etiam facilis</h3>
+							<p>
+								Aenean ornare velit lacus, ac varius enim lorem ullamcorper
+								dolore. Proin aliquam facilisis ante interdum. Sed nulla amet
+								lorem feugiat tempus aliquam.
+							</p>
+							<ul class="actions">
+								<li><a href="#" class="button">More</a></li>
+							</ul>
+						</article>
+						<article>
+							<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+							<h3>Feugiat lorem aenean</h3>
+							<p>
+								Aenean ornare velit lacus, ac varius enim lorem ullamcorper
+								dolore. Proin aliquam facilisis ante interdum. Sed nulla amet
+								lorem feugiat tempus aliquam.
+							</p>
+							<ul class="actions">
+								<li><a href="#" class="button">More</a></li>
+							</ul>
+						</article>
+						<article>
+							<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+							<h3>Amet varius aliquam</h3>
+							<p>
+								Aenean ornare velit lacus, ac varius enim lorem ullamcorper
+								dolore. Proin aliquam facilisis ante interdum. Sed nulla amet
+								lorem feugiat tempus aliquam.
+							</p>
+							<ul class="actions">
+								<li><a href="#" class="button">More</a></li>
+							</ul>
+						</article> -->
 					</div>
 				</section>
 			</div>
@@ -152,7 +267,19 @@
 								<li><a href="#">程序员的个人修养</a></li>
 							</ul>
 						</li>
-
+						<!-- <li><a href="#">Etiam Dolore</a></li>
+						<li><a href="#">Adipiscing</a></li>
+						<li>
+							<span class="opener">Another Submenu</span>
+							<ul>
+								<li><a href="#">Lorem Dolor</a></li>
+								<li><a href="#">Ipsum Adipiscing</a></li>
+								<li><a href="#">Tempus Magna</a></li>
+								<li><a href="#">Feugiat Veroeros</a></li>
+							</ul>
+						</li>
+						<li><a href="#">Maximus Erat</a></li>
+						<li><a href="#">Sapien Mauris</a></li> -->
 						<li><a href="aboutBlog.html">关于这个博客</a></li>
 						<li><a href="aboutMe.html">About me</a></li>
 					</ul>
@@ -206,7 +333,7 @@
 						<li class="icon solid fa-envelope">
 							<a href="#">information@untitled.tld</a>
 						</li>
-						<li class="icon solid fa-phone">13867908869</li>
+						<li class="icon solid fa-phone">(000) 000-0000</li>
 						<li class="icon solid fa-home">
 							1234 Somewhere Road #8254<br />
 							Nashville, TN 00000-0000
