--- a/aboutBlog.html
+++ b/aboutBlog.html
@@ -27,14 +27,17 @@
 					<div class="content">
 						<header>
 							<h1>
-								About me<br />
+								关于这个博客<br />
 							</h1>
 						</header>
 						<p>
-							我叫胡赞來，94年出生奔三团队的一员。目前是一位在上海的称职打工人。 </br></br>
-							
-							这个板块会在简历的基础上更加详细地介绍自己。
-							首先在右边贴上我的照片以表诚意。
+							建立这个博客的起因是去年的一场面试。 </br></br>
+
+							当时面试官所问的技术栈和我目前所使用的大相径庭。他很无奈地说了一句：
+							<h2>
+								“那你有什么可以展示给我的呢?”
+							</h2>
+							于是，这个博客就应声出现了。
 						</p>
 					</div>
 					<span class="image object">
