--- a/study-notes.html
+++ b/study-notes.html
@@ -17,31 +17,17 @@
         <!-- Nav -->
         <nav id="nav">
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li class="current"><a href="index.html">Home</a></li>
             <li>
-              <a href="#">Dropdown</a>
+              <a href="study-notes.html">STUDY NOTES</a>
               <ul>
-                <li><a href="#">Lorem ipsum</a></li>
-                <li><a href="#">Magna veroeros</a></li>
-                <li><a href="#">Etiam nisl</a></li>
-                <li>
-                  <a href="#">Sed consequat</a>
-                  <ul>
-                    <li><a href="#">Lorem dolor</a></li>
-                    <li><a href="#">Amet consequat</a></li>
-                    <li><a href="#">Magna phasellus</a></li>
-                    <li><a href="#">Etiam nisl</a></li>
-                    <li><a href="#">Sed feugiat</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">Nisl tempus</a></li>
+                <li><a href="javascript.html">JavaScript</a></li>
+                <li><a href="react.html">React</a></li>
               </ul>
             </li>
-            <li class="current">
-              <a href="left-sidebar.html">Left Sidebar</a>
-            </li>
-            <li><a href="right-sidebar.html">Right Sidebar</a></li>
-            <li><a href="no-sidebar.html">No Sidebar</a></li>
+            <li><a href="left-sidebar.html">PERSONAL SKILLS</a></li>
+            <li><a href="right-sidebar.html">PROJECTS</a></li>
+            <li><a href="no-sidebar.html">ABOUT THIS WEBSITE</a></li>
           </ul>
         </nav>
       </section>
