--- a/study-notes.html
+++ b/study-notes.html
@@ -16,20 +16,25 @@
       <section id="header" class="wrapper">
         <!-- Nav -->
         <nav id="nav">
-          <ul>
-            <li class="current"><a href="index.html">Home</a></li>
-            <li>
-              <a href="study-notes.html">STUDY NOTES</a>
-              <ul>
-                <li><a href="javascript.html">JavaScript</a></li>
-                <li><a href="react.html">React</a></li>
-              </ul>
-            </li>
-            <li><a href="left-sidebar.html">PERSONAL SKILLS</a></li>
-            <li><a href="right-sidebar.html">PROJECTS</a></li>
-            <li><a href="no-sidebar.html">ABOUT THIS WEBSITE</a></li>
-          </ul>
-        </nav>
+			<ul>
+			  <li class="current"><a href="index.html">Home</a></li>
+			  <li>
+				<a href="study-notes.html">STUDY NOTES</a>
+				<ul>
+				  <li><a href="javascript.html">JavaScript</a></li>
+				  <li><a href="react.html">React</a></li>
+				</ul>
+			  </li>
+			  <li><a href="left-sidebar.html">personal SKILLS</a></li>
+			  <li><a href="right-sidebar.html">projects</a></li>
+			  <li><a href="no-sidebar.html">about it</a></li>
+			  <li>
+				<a href="#" class="icon brands alt fa-github"
+				  >GitHub<span class="label">GitHub</span></a
+				>
+			  </li>
+			</ul>
+		  </nav>
       </section>
 
       <!-- Main -->
