--- a/index.html
+++ b/index.html
@@ -31,9 +31,14 @@
                 <li><a href="react.html">React</a></li>
               </ul>
             </li>
-            <li><a href="left-sidebar.html">PERSONAL SKILLS</a></li>
-            <li><a href="right-sidebar.html">PROJECTS</a></li>
-            <li><a href="no-sidebar.html">ABOUT THIS WEBSITE</a></li>
+            <li><a href="left-sidebar.html">personal SKILLS</a></li>
+            <li><a href="right-sidebar.html">projects</a></li>
+            <li><a href="no-sidebar.html">about it</a></li>
+            <li>
+              <a href="#" class="icon brands alt fa-github"
+                >GitHub<span class="label">GitHub</span></a
+              >
+            </li>
           </ul>
         </nav>
       </section>
