--- a/react.html
+++ b/react.html
@@ -18,33 +18,32 @@
     <div id="page-wrapper">
       <!-- Header -->
       <section id="header" class="wrapper">
-        <!-- Logo -->
-        <div id="logo">
-          <h1><a href="index.html">Escape Velocity</a></h1>
-          <p>A free responsive site template by HTML5 UP</p>
-        </div>
-
         <!-- Nav -->
         <nav id="nav">
-          <ul>
-            <li class="current"><a href="index.html">Home</a></li>
-            <li>
-              <a href="study-notes.html">STUDY NOTES</a>
-              <ul>
-                <li><a href="javascript.html">JavaScript</a></li>
-                <li><a href="react.html">React</a></li>
-              </ul>
-            </li>
-            <li><a href="left-sidebar.html">PERSONAL SKILLS</a></li>
-            <li><a href="right-sidebar.html">PROJECTS</a></li>
-            <li><a href="no-sidebar.html">ABOUT THIS WEBSITE</a></li>
-          </ul>
-        </nav>
+			<ul>
+			  <li class="current"><a href="index.html">Home</a></li>
+			  <li>
+				<a href="study-notes.html">STUDY NOTES</a>
+				<ul>
+				  <li><a href="javascript.html">JavaScript</a></li>
+				  <li><a href="react.html">React</a></li>
+				</ul>
+			  </li>
+			  <li><a href="left-sidebar.html">personal SKILLS</a></li>
+			  <li><a href="right-sidebar.html">projects</a></li>
+			  <li><a href="no-sidebar.html">about it</a></li>
+			  <li>
+				<a href="#" class="icon brands alt fa-github"
+				  >GitHub<span class="label">GitHub</span></a
+				>
+			  </li>
+			</ul>
+		  </nav>
       </section>
 
       <!-- Main -->
       <section id="main" class="wrapper style2">
-        <div class="title">Left Sidebar</div>
+        <div class="title">React Study Notes</div>
         <div class="container">
           <div class="row gtr-150">
             <div class="col-4 col-12-medium">
