--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
               <ul>
                 <li><a href="javascript.html">JavaScript</a></li>
                 <li><a href="react.html">React</a></li>
+				<li><a href="react.html">network</a></li>
               </ul>
             </li>
             <li><a href="left-sidebar.html">personal SKILLS</a></li>
