--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <li>
               <a href="study-notes.html">STUDY NOTES</a>
               <ul>
-                <li><a href="javascript.html">JavaScript</a></li>
+                <li><a href="study-notes/javascript.html">JavaScript</a></li>
                 <li><a href="react.html">React</a></li>
-				<li><a href="react.html">network</a></li>
+                <li><a href="react.html">network</a></li>
               </ul>
             </li>
             <li><a href="left-sidebar.html">personal SKILLS</a></li>
@@ -48,11 +48,6 @@
       <section id="main" class="wrapper style2">
         <div class="title">The Details</div>
         <div class="container">
-          <!-- Image -->
-          <a href="#" class="image featured">
-            <img src="images/pic01.jpg" alt="" />
-          </a>
-
           <!-- Features -->
           <section id="features">
             <header class="style1">
