--- a/study-notes/network.html
+++ b/study-notes/network.html
@@ -12,7 +12,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="../assets/css/main.css" />
   </head>
   <body class="left-sidebar is-preload">
     <div id="page-wrapper">
@@ -20,29 +20,29 @@
       <section id="header" class="wrapper">
         <!-- Nav -->
         <nav id="nav">
-			<ul>
-			  <li class="current"><a href="index.html">Home</a></li>
-			  <li>
-				<a href="study-notes.html">STUDY NOTES</a>
-				<ul>
-				  <li><a href="javascript.html">JavaScript</a></li>
-				  <li><a href="react.html">React</a></li>
-				</ul>
-			  </li>
-			  <li><a href="left-sidebar.html">personal SKILLS</a></li>
-			  <li><a href="right-sidebar.html">projects</a></li>
-			  <li><a href="no-sidebar.html">about it</a></li>
-			  <li>
-				<a href="#" class="icon brands alt fa-github"
-				  >GitHub<span class="label">GitHub</span></a
-				>
-			  </li>
-			</ul>
-		  </nav>
+          <ul>
+            <li class="current"><a href="../index.html">Home</a></li>
+            <li>
+              <a href="../study-notes.html">STUDY NOTES</a>
+              <ul>
+                <li><a href="javascript.html">JavaScript</a></li>
+                <li><a href="react.html">React</a></li>
+              </ul>
+            </li>
+            <li><a href="../left-sidebar.html">personal SKILLS</a></li>
+            <li><a href="../right-sidebar.html">projects</a></li>
+            <li><a href="../no-sidebar.html">about it</a></li>
+            <li>
+              <a href="#" class="icon brands alt fa-github"
+                >GitHub<span class="label">GitHub</span></a
+              >
+            </li>
+          </ul>
+        </nav>
       </section>
 
       <!-- Main -->
-      <section id="main" class="wrapper style2">
+      <section id="main" class="study-wrapper wrapper style2">
         <div class="title">Left Sidebar</div>
         <div class="container">
           <div class="row gtr-150">
