--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <li><a href="react.html">network</a></li>
               </ul>
             </li>
-            <li><a href="left-sidebar.html">personal SKILLS</a></li>
-            <li><a href="right-sidebar.html">projects</a></li>
-            <li><a href="no-sidebar.html">about it</a></li>
+            <li><a href="personal-skills.html">personal SKILLS</a></li>
+            <li><a href="projects.html">projects</a></li>
+            <li><a href="about-it.html">about it</a></li>
             <li>
               <a href="#" class="icon brands alt fa-github"
                 >GitHub<span class="label">GitHub</span></a
