add github link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             <li><a href="projects.html">projects</a></li>
             <li><a href="about-it.html">about it</a></li>
             <li>
-              <a href="#" class="icon brands alt fa-github"
+              <a
+                href="https://github.com/zanlaihu"
+                class="icon brands alt fa-github"
                 >GitHub<span class="label">GitHub</span></a
               >
             </li>
