--- a/index.html
+++ b/index.html
@@ -32,7 +32,14 @@
                 <li><a href="react.html">network</a></li>
               </ul>
             </li>
-            <li><a href="personal-skills.html">personal SKILLS</a></li>
+            <li>
+              <a href="personal-skills.html">personal SKILLS</a>
+              <ul>
+                <li><a href="react.html">Angular</a></li>
+				<li><a href="react.html">React</a></li>
+                <li><a href="study-notes/javascript.html">JavaScript</a></li>
+              </ul>
+            </li>
             <li><a href="projects.html">projects</a></li>
             <li><a href="about-it.html">about it</a></li>
             <li>
