--- a/projects.html
+++ b/projects.html
@@ -26,11 +26,20 @@
                 <li><a href="react.html">network</a></li>
               </ul>
             </li>
-            <li><a href="personal-skills.html">personal SKILLS</a></li>
+            <li>
+              <a href="personal-skills.html">personal SKILLS</a>
+              <ul>
+                <li><a href="react.html">Angular</a></li>
+				<li><a href="react.html">React</a></li>
+                <li><a href="study-notes/javascript.html">JavaScript</a></li>
+              </ul>
+            </li>
             <li><a href="projects.html">projects</a></li>
             <li><a href="about-it.html">about it</a></li>
             <li>
-              <a href="https://github.com/zanlaihu" class="icon brands alt fa-github"
+              <a
+                href="https://github.com/zanlaihu"
+                class="icon brands alt fa-github"
                 >GitHub<span class="label">GitHub</span></a
               >
             </li>
