--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
               <a
                 href="https://github.com/zanlaihu"
                 class="icon brands alt fa-github"
+				target="_blank"
                 >GitHub<span class="label">GitHub</span></a
               >
             </li>
