--- a/study-notes.html
+++ b/study-notes.html
@@ -40,6 +40,7 @@
               <a
                 href="https://github.com/zanlaihu"
                 class="icon brands alt fa-github"
+                target="_blank"
                 >GitHub<span class="label">GitHub</span></a
               >
             </li>
