--- a/study-notes/javascript.html
+++ b/study-notes/javascript.html
@@ -33,7 +33,10 @@
             <li><a href="../right-sidebar.html">projects</a></li>
             <li><a href="../no-sidebar.html">about it</a></li>
             <li>
-              <a href="#" class="icon brands alt fa-github"
+              <a
+                href="https://github.com/zanlaihu"
+                class="icon brands alt fa-github"
+                target="_blank"
                 >GitHub<span class="label">GitHub</span></a
               >
             </li>
