--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
       </section>
 
       <!-- Main -->
-      <section id="main" class="study-wrapper wrapper style2">
+      <section id="main" class="content-bar wrapper style2">
         <div class="title">Left Sidebar</div>
         <div class="container">
           <div class="row gtr-150">
