--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a href="personal-skills.html">专业技能</a>
               <ul>
                 <li><a href="react.html">Angular</a></li>
-				<li><a href="react.html">React</a></li>
+                <li><a href="react.html">React</a></li>
                 <li><a href="study-notes/javascript.html">JavaScript</a></li>
               </ul>
             </li>
@@ -46,8 +46,8 @@
               <a
                 href="https://github.com/zanlaihu"
                 class="icon brands alt fa-github"
-				target="_blank"
-                >GitHub<span class="label">GitHub</span></a
+                target="_blank"
+                ><span class="label">GitHub</span></a
               >
             </li>
           </ul>
@@ -177,7 +177,6 @@
                 </ul>
               </section>
             </div>
-
           </div>
         </div>
       </section>
