--- a/study-notes.html
+++ b/study-notes.html
@@ -17,31 +17,21 @@
         <!-- Nav -->
         <nav id="nav">
           <ul>
-            <li class="current"><a href="index.html">Home</a></li>
+            <li class="current"><a href="index.html">主页</a></li>
             <li>
-              <a href="study-notes.html">STUDY NOTES</a>
-              <ul>
-                <li><a href="study-notes/javascript.html">JavaScript</a></li>
-                <li><a href="react.html">React</a></li>
-                <li><a href="react.html">network</a></li>
-              </ul>
+              <a href="study-notes.html">学习笔记</a>
             </li>
             <li>
-              <a href="personal-skills.html">personal SKILLS</a>
-              <ul>
-                <li><a href="react.html">Angular</a></li>
-				<li><a href="react.html">React</a></li>
-                <li><a href="study-notes/javascript.html">JavaScript</a></li>
-              </ul>
+              <a href="personal-skills.html">专业技能</a>
             </li>
-            <li><a href="projects.html">projects</a></li>
-            <li><a href="about-it.html">about it</a></li>
+            <li><a href="projects.html">项目经历</a></li>
+            <li><a href="about-it.html">关于本站</a></li>
             <li>
               <a
                 href="https://github.com/zanlaihu"
                 class="icon brands alt fa-github"
                 target="_blank"
-                >GitHub<span class="label">GitHub</span></a
+                ><span class="label">GitHub</span></a
               >
             </li>
           </ul>
