--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body class="homepage is-preload">
     <div id="page-wrapper">
       <!-- Header -->
+      <div id="news">  5月26日：小站初建成，若有bug还请多见谅！目前mobile端响应式布局仍在调试中，使用PC/Mac查看已获得最佳体验！</div>
       <section id="header" class="wrapper">
         <!-- Logo -->
         <div id="logo">
@@ -177,6 +178,72 @@
           </div>
         </div>
       </section>
+      <div id="navPanel">
+        <nav>
+          <a
+            class="link depth-0"
+            href="index.html"
+            style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0)"
+            ><span class="indent-0"></span>Home</a
+          ><a
+            class="link depth-0"
+            href="study-notes.html"
+            style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0)"
+            ><span class="indent-0"></span>STUDY NOTES</a
+          ><a
+            class="link depth-1"
+            href="study-notes/javascript.html"
+            style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0)"
+            ><span class="indent-1"></span>JavaScript</a
+          ><a
+            class="link depth-1"
+            href="react.html"
+            style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0)"
+            ><span class="indent-1"></span>React</a
+          ><a
+            class="link depth-1"
+            href="react.html"
+            style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0)"
+            ><span class="indent-1"></span>network</a
+          ><a
+            class="link depth-0"
+            href="personal-skills.html"
+            style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0)"
+            ><span class="indent-0"></span>personal SKILLS</a
+          ><a
+            class="link depth-1"
+            href="react.html"
+            style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0)"
+            ><span class="indent-1"></span>Angular</a
+          ><a
+            class="link depth-1"
+            href="react.html"
+            style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0)"
+            ><span class="indent-1"></span>React</a
+          ><a
+            class="link depth-1"
+            href="study-notes/javascript.html"
+            style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0)"
+            ><span class="indent-1"></span>JavaScript</a
+          ><a
+            class="link depth-0"
+            href="projects.html"
+            style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0)"
+            ><span class="indent-0"></span>projects</a
+          ><a
+            class="link depth-0"
+            href="about-it.html"
+            style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0)"
+            ><span class="indent-0"></span>about it</a
+          ><a
+            class="link depth-0"
+            target="_blank"
+            href="https://github.com/zanlaihu"
+            style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0)"
+            ><span class="indent-0"></span>GitHubGitHub</a
+          >
+        </nav>
+      </div>
     </div>
 
     <!-- Scripts -->
