--- a/index.html
+++ b/index.html
@@ -13,41 +13,33 @@
   <body class="homepage is-preload">
     <div id="page-wrapper">
       <!-- Header -->
-      <div id="news">  5月26日：小站初建成，若有bug还请多见谅！目前mobile端响应式布局仍在调试中，使用PC/Mac查看已获得最佳体验！</div>
-      <section id="header" class="wrapper">
-        <!-- Logo -->
-        <div id="logo">
-          <h1><a href="index.html">Hu Zanlai's Website</a></h1>
-          <p>欢迎访问本站。</p>
-        </div>
-
-        <!-- Nav -->
-        <nav id="nav">
-          <ul>
-            <li class="current"><a href="index.html">主页</a></li>
-            <li>
-              <a href="study-notes.html">学习笔记</a>
-            </li>
-            <li>
-              <a href="personal-skills.html">专业技能</a>
-            </li>
-            <li><a href="projects.html">项目经历</a></li>
-            <li><a href="about-it.html">关于本站</a></li>
-            <li>
-              <a
-                href="https://github.com/zanlaihu"
-                class="icon brands alt fa-github"
-                target="_blank"
-                ><span class="label">GitHub</span></a
-              >
-            </li>
-          </ul>
-        </nav>
-      </section>
+      <div id="news" class="news">
+        &nbsp;&nbsp;&nbsp;5月26日：小站初建成，若有bug还请多见谅！目前mobile端响应式布局仍在调试中，请使用PC/Mac访问来获得最佳体验！
+      </div>
+      <div id="navigation" class="navigation">
+        <section id="header" class="wrapper">
+          <!-- Nav -->
+          <nav id="nav">
+            <ul>
+              <li class="current"><a href="index.html">主页</a></li>
+              <li>
+                <a href="study-notes.html">学习笔记</a>
+              </li>
+              <li>
+                <a href="personal-skills.html">专业技能</a>
+              </li>
+              <li><a href="projects.html">项目经历</a></li>
+              <li><a href="about-it.html">关于本站</a></li>
+              <li>
+                <a href="https://github.com/zanlaihu">GitHub</a>
+              </li>
+            </ul>
+          </nav>
+        </section>
+      </div>
 
       <!-- Main -->
       <section id="main" class="wrapper style2">
-        <div class="title">The Details</div>
         <div class="container">
           <!-- Features -->
           <section id="features">
