--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<!-- Header -->
 			<div id="news" class="news">
 				<div class="news-text">
-					5月26日：小站初建成，若有bug还请多见谅！目前mobile端响应式布局仍在调试中，请使用PC/Mac访问来获得最佳体验！
+					5月27日：❤❤❤小站初建成，若有bug还请多见谅！目前mobile端响应式布局仍在调试中，请使用PC/Mac访问来获得最佳体验！❤❤❤
 				</div>
 
 			</div>
