--- a/index.html
+++ b/index.html
@@ -17,28 +17,26 @@
 				<div class="news-text">
 					5月27日：❤❤❤小站初建成，若有bug还请多见谅！目前mobile端响应式布局仍在调试中，请使用PC/Mac访问来获得最佳体验！❤❤❤
 				</div>
-
 			</div>
-			<div id="navigation" class="navigation">
-				<section id="header" class="wrapper">
-					<!-- Nav -->
-					<nav id="nav">
-						<ul>
-							<li class="current"><a href="index.html">主页</a></li>
-							<li>
-								<a href="study-notes.html">学习笔记</a>
-							</li>
-							<li>
-								<a href="personal-skills.html">专业技能</a>
-							</li>
-							<li><a href="projects.html">项目经历</a></li>
-							<li><a href="about-it.html">关于本站</a></li>
-							<li>
-								<a href="https://github.com/zanlaihu">GitHub</a>
-							</li>
-						</ul>
-					</nav>
-				</section>
+			<div class="navigation">
+				<div ></div>
+				<!-- Nav -->
+				<!-- <nav>
+					<ul>
+						<li ><a href="index.html">主页</a></li>
+						<li>
+							<a href="study-notes.html">学习笔记</a>
+						</li>
+						<li>
+							<a href="personal-skills.html">专业技能</a>
+						</li>
+						<li><a href="projects.html">项目经历</a></li>
+						<li><a href="about-it.html">关于本站</a></li>
+						<li>
+							<a href="https://github.com/zanlaihu">GitHub</a>
+						</li>
+					</ul>
+				</nav> -->
 			</div>
 
 			<!-- Main -->
