--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				</div>
 			</div>
 			<div class="navigation">
-				<div ></div>
+				<div class="logo">Zanlai's website</div>
 				<!-- Nav -->
 				<!-- <nav>
 					<ul>
