--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 				</div>
 			</div>
 			<div class="navigation">
+				<div class="logo logo1">Hu</div>
 				<div class="logo">Zanlai's website</div>
 				<!-- Nav -->
 				<!-- <nav>
