--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 				<div class="logo logo1">Hu</div>
 				<div class="logo">Zanlai's website</div>
 				<div class="navigation-choice">
-					<div class="choice"><a href="">主页</a></div>
-					<div class="choice"><a href="">学习笔记</a></div>
-					<div class="choice"><a href="">专业技能</a></div>
-					<div class="choice"><a href="">项目经历</a></div>
-					<div class="choice"><a href="">关于本站</a></div>
-					<div class="choice github">GitHub</a></div>
+					<a href=""><div class="choice choice-focused">主页</div></a>
+					<a href=""><div class="choice">学习笔记</div></a>
+					<a href=""><div class="choice">专业技能</div></a>
+					<a href=""><div class="choice">项目经历</div></a>
+					<a href=""><div class="choice">关于本站</div></a>
+					<a href=""><div class="choice github">GitHub</div></a>
 				</div>
 			</div>
 
