调整一下GitHub的式样

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<a href=""><div class="choice">专业技能</div></a>
 					<a href=""><div class="choice">项目经历</div></a>
 					<a href=""><div class="choice">关于本站</div></a>
-					<a href=""><div class="choice github">GitHub</div></a>
+					<a href=""><div class="github">GitHub</div></a>
 				</div>
 			</div>
 
