--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 
-	<body class="homepage is-preload">
-		<div id="page-wrapper">
+	<body >
+		<div >
 			<!-- Header -->
 			<div id="news" class="news">
 				<div class="news-text">
@@ -19,8 +19,8 @@
 				</div>
 			</div>
 			<div class="navigation">
-				<div class="logo logo1">Hu</div>
-				<div class="logo">Zanlai's website</div>
+				<div class="logo logo1">HU</div>
+				<div class="logo">ZANLAI</div>
 				<div class="navigation-choice">
 					<a href=""><div class="choice choice-focused">主页</div></a>
 					<a href=""><div class="choice">学习笔记</div></a>
@@ -30,109 +30,12 @@
 					<a href=""><div class="github">GitHub</div></a>
 				</div>
 			</div>
-
-			<!-- Main -->
-			<section id="main" class="wrapper style2">
-				<div class="container">
-					<!-- Features -->
-					<section id="features">
-						<header class="style1">
-							<h2>Dolor consequat feugiat amet veroeros</h2>
-							<p>Feugiat dolor nullam orci pretium phasellus justo</p>
-						</header>
-						<div class="feature-list">
-							<div class="row">
-								<div class="col-6 col-12-medium">
-									<section>
-										<h3 class="icon fa-comment">Mattis velit diam vulputate</h3>
-										<p>
-											Eget mattis at, laoreet vel et velit aliquam diam ante,
-											aliquet sit amet vulputate et magna feugiat laoreet vel
-											velit lorem.
-										</p>
-									</section>
-								</div>
-								<div class="col-6 col-12-medium">
-									<section>
-										<h3 class="icon solid fa-sync">
-											Lorem ipsum dolor sit veroeros
-										</h3>
-										<p>
-											Eget mattis at, laoreet vel et velit aliquam diam ante,
-											aliquet sit amet vulputate et magna feugiat laoreet vel
-											velit lorem.
-										</p>
-									</section>
-								</div>
-								<div class="col-6 col-12-medium">
-									<section>
-										<h3 class="icon fa-image">Pretium phasellus justo lorem</h3>
-										<p>
-											Eget mattis at, laoreet vel et velit aliquam diam ante,
-											aliquet sit amet vulputate et magna feugiat laoreet vel
-											velit lorem.
-										</p>
-									</section>
-								</div>
-								<div class="col-6 col-12-medium">
-									<section>
-										<h3 class="icon solid fa-cog">Tempus sed pretium orci</h3>
-										<p>
-											Eget mattis at, laoreet vel et velit aliquam diam ante,
-											aliquet sit amet vulputate et magna feugiat laoreet vel
-											velit lorem.
-										</p>
-									</section>
-								</div>
-								<div class="col-6 col-12-medium">
-									<section>
-										<h3 class="icon solid fa-wrench">
-											Aliquam consequat et feugiat
-										</h3>
-										<p>
-											Eget mattis at, laoreet vel et velit aliquam diam ante,
-											aliquet sit amet vulputate et magna feugiat laoreet vel
-											velit lorem.
-										</p>
-									</section>
-								</div>
-								<div class="col-6 col-12-medium">
-									<section>
-										<h3 class="icon solid fa-check">
-											Dolore laoreet aliquam mattis
-										</h3>
-										<p>
-											Eget mattis at, laoreet vel et velit aliquam diam ante,
-											aliquet sit amet vulputate et magna feugiat laoreet vel
-											velit lorem.
-										</p>
-									</section>
-								</div>
-							</div>
-						</div>
-					</section>
-				</div>
-			</section>
-
-
-
-			<!-- Footer -->
-			<section id="footer" class="wrapper content-bar">
-				<div class="container">
-					<div id="copyright">
-						<ul>
-							<li>Made by Zanlai</li>
-						</ul>
-					</div>
-				</div>
-			</section>
+			<div class="whole">
+				<div class="whole-left"></div>
+				<div class="whole-right"></div>
+			</div>
 		</div>
 
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.dropotron.min.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
+
 	</body>
 </html>
