--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 				</div>
 			</div>
 			<div class="navigation">
-				<div class="logo logo1">HU</div>
-				<div class="logo">ZANLAI</div>
+				<div class="profile"></div>
+				<div class="logo logo1">Hu <br>Zanlai</div>
 				<div class="navigation-choice">
 					<a href=""><div class="choice choice-focused">主页</div></a>
 					<a href=""><div class="choice">学习笔记</div></a>
