--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 				<div class="whole-left"></div>
 				<div class="whole-right"></div>
 			</div>
+			<div class="bottom">
+				<div class="bottom-transition"></div>
+
+			</div>
 		</div>
 
 
