--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			</div>
 			<div class="bottom">
 				<div class="bottom-transition"></div>
-
+				<div class="pure-bottom"></div>
 			</div>
 		</div>
 
