--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 
-	<body >
-		<div >
+	<body>
+		<div>
 			<!-- Header -->
 			<div id="news" class="news">
 				<div class="news-text">
@@ -27,7 +27,7 @@
 					<a href=""><div class="choice">专业技能</div></a>
 					<a href=""><div class="choice">项目经历</div></a>
 					<a href=""><div class="choice">关于本站</div></a>
-					<a href=""><div class="github">GitHub</div></a>
+					<a href="https://github.com/zanlaihu"><div class="github">GitHub</div></a>
 				</div>
 			</div>
 			<div class="whole">
