--- a/index.html
+++ b/index.html
@@ -1,35 +1,53 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<title>Hu Zanlai Website</title>
 		<meta charset="utf-8" />
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1, user-scalable=no"
-			/>
+		<meta name="viewport" content="width=device-width, initial-scale=1,
+			user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 
 	<body>
 		<div>
 			<!-- Header -->
-			<div id="news" class="news">
+			<div class="news">
 				<div class="news-text">
 					5月27日：❤❤❤小站初建成，若有bug还请多见谅！目前响应式布局和多端适配仍在调试中，请使用chrome访问来获得最佳体验！❤❤❤
 				</div>
 			</div>
 			<div class="navigation">
-				<div class="profile"></div>
-				<div class="logo logo1">Hu <br>Zanlai</div>
-				<div class="navigation-choice">
-					<a href=""><div class="choice choice-focused">主页</div></a>
-					<a href=""><div class="choice">学习笔记</div></a>
-					<a href=""><div class="choice">专业技能</div></a>
-					<a href=""><div class="choice">项目经历</div></a>
-					<a href=""><div class="choice">关于本站</div></a>
-					<a href="https://github.com/zanlaihu"><div class="github">GitHub</div></a>
+				<div class="navigation-content">
+					<div class="profile">
+						<div class="profile-pic">
+						</div>
+					</div>
+					<div class="logo logo1">Hu <br>Zanlai</div>
+					<div class="navigation-choice">
+						<a href="">
+							<div class="choice choice-focused">主页</div>
+						</a>
+						<a href="">
+							<div class="choice">学习笔记</div>
+						</a>
+						<a href="">
+							<div class="choice">专业技能</div>
+						</a>
+						<a href="">
+							<div class="choice">项目经历</div>
+						</a>
+						<a href="">
+							<div class="choice">关于本站</div>
+						</a>
+						<a href="https://github.com/zanlaihu">
+							<div class="github">GitHub</div>
+						</a>
+					</div>
 				</div>
+
 			</div>
+			<div class="home-ins"></div>
 			<div class="whole">
 				<div class="whole-left"></div>
 				<div class="whole-right"></div>
@@ -38,8 +56,6 @@
 				<div class="bottom-transition"></div>
 				<div class="pure-bottom"></div>
 			</div>
-		</div>
+		</body>
 
-
-	</body>
-</html>
+	</html>
