把变色问题解决

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					</div>
 					<div class="logo logo1">Hu <br>Zanlai</div>
 					<div class="navigation-choice">
-						<a href="">
+						<a href="index.html">
 							<div class="choice choice-focused">主页</div>
 						</a>
 						<a href="">
