--- a/index.html
+++ b/index.html
@@ -9,17 +9,12 @@
   <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
-
-
-
-
-
 <body>
   <div>
     <!-- Header -->
     <div class="news">
       <div class="news-text">
-        5月27日：❤❤❤小站初建成，若有bug还请多见谅！目前响应式布局和多端适配仍在调试中，请使用chrome访问来获得最佳体验！❤❤❤
+        ❤❤❤小站初建成，若有bug还请多见谅！目前响应式布局和多端适配仍在调试中，请使用chrome访问来获得最佳体验！❤❤❤
       </div>
     </div>
     <div class="navigation">
