--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="choice">关于本站</div>
           </a>
           <a href="https://github.com/zanlaihu">
-            <div class="github">GitHub</div>
+            <div class="github"></div>
           </a>
         </div>
       </div>
