--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
         ❤❤❤小站初建成，若有bug还请多见谅！目前响应式布局和多端适配仍在调试中，请使用chrome访问来获得最佳体验！❤❤❤
       </div>
     </div>
+    <!-- header -->
     <div class="navigation">
       <div class="navigation-content">
+        <!-- 宇航员 -->
         <div class="profile">
           <div class="profile-pic">
           </div>
         </div>
+        <!-- 名字 -->
         <div class="logo logo1">Hu <br>Zanlai</div>
+        <!-- 导航 -->
         <div class="navigation-choice">
           <a href="index.html">
             <div class="choice choice-focused">主页</div>
@@ -45,9 +49,10 @@
           </a>
         </div>
       </div>
-
     </div>
+    <!-- 首页的彩色背景介绍 -->
     <div class="home-ins"></div>
+    <!-- content -->
     <div class="whole">
       <div class="whole-left"></div>
       <div class="whole-right"></div>
