--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
     </div>
 
     <!-- 首页的彩色背景介绍 -->
-    <div class="home-ins"></div>
+    <div class="home-ins">
+      <div class="ins-left"></div>
+      <div class="ins-right"></div>
+    </div>
 
     <!-- content -->
     <div class="whole">
