--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
-<body>
+<body class="body-style">
   <div>
 
     <!-- Header -->
@@ -46,6 +46,7 @@
           <a href="">
             <div class="choice">关于本站</div>
           </a>
+          <!-- github logo -->
           <a href="https://github.com/zanlaihu">
             <div class="github"></div>
           </a>
@@ -55,8 +56,15 @@
 
     <!-- 首页的彩色背景介绍 -->
     <div class="home-ins">
-      <div class="ins-left"></div>
-      <div class="ins-right"></div>
+      <div class="ins-content">
+        <div class="ins-left">
+          <div class="ins-news"></div>
+          <div class="ins-title">多做事，少说话。</div>
+          <div class="ins-ins">用于放置学习笔记、项目、技能清单。选择您想要了解的内容。</div>
+          <div class="ins-search"></div>
+        </div>
+        <div class="ins-right"></div>
+      </div>
     </div>
 
     <!-- content -->
