--- a/study-notes.html
+++ b/study-notes.html
@@ -73,6 +73,11 @@
       </div>
     </div>
 
+    <!-- content -->
+    <div class="whole">
+      <div class="whole-left"></div>
+      <div class="whole-right"></div>
+    </div>
     <div class="bottom">
       <div class="bottom-transition"></div>
       <div class="pure-bottom"></div>
