--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Header -->
     <div class="news">
       <div class="news-text">
-        ❤❤❤小站初建成，若有bug还请多见谅！目前响应式布局和多端适配仍在调试中，请使用chrome访问来获得最佳体验！❤❤❤
+        ❤❤❤小站初建成，手机尺寸适配仍在调试中，请使用电脑端chrome/safari访问来获得最佳体验！❤❤❤
       </div>
     </div>
 
@@ -66,7 +66,7 @@
           </div>
 
           <div class="ins-title">因为兴趣使然而建立的小站</div>
-          <div class="ins-ins">秉承着“程序员应该多做事少说话”的原则而建立的站点。用于放置学习笔记、项目经验总结、技能清单。</div>
+          <div class="ins-ins">秉承着“程序员应该多做事少说话”的原则而建立的站点。用于放置学习笔记、项目经验总结、技能清单、以及最右边小小的GitHub链接。快点击顶部的导航来选择感兴趣的内容吧！</div>
           <div class="ins-search"></div>
         </div>
         <div class="ins-right"></div>
