整理代码并加上往期精彩

--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
       </div>
     </div>
 
+    <div class="previous-title">往期精彩</div>
+    <div class="previous"></div>
+
     <div class="bottom">
       <div class="bottom-transition"></div>
       <div class="pure-bottom"></div>
