增加了bottom的logo和标语

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Header -->
     <div class="news">
       <div class="news-text">
-        ❤❤❤小站初建成，手机尺寸适配仍在调试中，请使用电脑端chrome/safari访问来获得最佳体验！❤❤❤
+        ❤❤❤小站初建成，有bug还请多见谅！手机尺寸适配仍在调试中，请使用电脑端chrome/safari访问来获得最佳体验！❤❤❤
       </div>
     </div>
 
@@ -73,12 +73,15 @@
       </div>
     </div>
 
-    <div class="previous-title">往期精彩</div>
-    <div class="previous"></div>
+
 
     <div class="bottom">
-      <div class="bottom-transition"></div>
-      <div class="pure-bottom"></div>
+      <div class="previous-title"></div>
+      <div class="bottom-logo">
+        <div class="profile-pic"></div>
+      </div>
+      <div class="bottom-label">Made with ❤️ by Zanlai.</div>
+      </div>
     </div>
 </body>
 
