--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Header -->
     <div class="news">
       <div class="news-text">
-        ❤❤❤小站初建成，有bug还请多见谅！手机尺寸适配仍在调试中，请使用电脑端chrome/safari访问来获得最佳体验！❤❤❤
+        ❤️❤️❤️小站初建成，有bug还请多见谅！手机尺寸适配仍在调试中，请使用电脑端chrome/safari访问来获得最佳体验！❤️❤️❤️
       </div>
     </div>
 
@@ -77,6 +77,13 @@
 
     <div class="bottom">
       <div class="previous-title"></div>
+      <div class="bottom-contact home-bottom-special">
+        <div class="contact-title">联系方式</div>
+        <div class="contact-message">手机：13867908869</div>
+        <div class="contact-message">微信：13867908869</div>
+        <div class="contact-message">邮箱：klaus@outlook.com</div>
+      </div>
+      <div class="bottom-line home-bottom-special"></div>
       <div class="bottom-logo">
         <div class="profile-pic"></div>
       </div>
