增加侧边栏

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a href="index.html">
             <div class="choice choice-focused">主页</div>
           </a>
-          <a href="">
+          <a href="study-notes.html">
             <div class="choice">学习笔记</div>
           </a>
           <a href="">
@@ -76,7 +76,7 @@
 
 
     <div class="bottom">
-      <div class="previous-title"></div>
+      <div class="previous-title home-bottom-special"></div>
       <div class="bottom-contact home-bottom-special">
         <div class="contact-title">联系方式</div>
         <div class="contact-message">手机：13867908869</div>
