--- a/study-notes.html
+++ b/study-notes.html
@@ -15,12 +15,12 @@
     <!-- Header -->
     <div class="news">
       <div class="news-text">
-        ❤❤❤小站初建成，若有bug还请多见谅！目前响应式布局和多端适配仍在调试中，请使用chrome访问来获得最佳体验！❤❤❤
+        ❤️❤️❤️小站初建成，有bug还请多见谅！手机尺寸适配仍在调试中，请使用电脑端chrome/safari访问来获得最佳体验！❤️❤️❤️
       </div>
     </div>
 
     <!-- header -->
-    <div class="navigation">
+    <div class="navigation navigation-unhome">
       <div class="navigation-content">
         <!-- 宇航员 -->
         <div class="profile">
@@ -32,10 +32,10 @@
         <!-- 导航 -->
         <div class="navigation-choice">
           <a href="index.html">
-            <div class="choice choice-focused">主页</div>
+            <div class="choice ">主页</div>
           </a>
-          <a href="">
-            <div class="choice">学习笔记</div>
+          <a href="study-notes.html">
+            <div class="choice choice-focused">学习笔记</div>
           </a>
           <a href="">
             <div class="choice">专业技能</div>
@@ -54,34 +54,25 @@
       </div>
     </div>
 
-    <!-- 首页的彩色背景介绍 -->
-    <div class="home-ins">
-      <div class="ins-content">
-        <div class="ins-left">
-
-          <div class="ins-news">
-            <div class="ins-news-logo">最新</div>
-            <div class="ins-news-title">小破站的艰辛建站史</div>
-            <div class="ins-arrow"></div>
-          </div>
-
-          <div class="ins-title">因为兴趣使然而建立的小站</div>
-          <div class="ins-ins">秉承着“程序员应该多做事少说话”的原则而建立的站点。用于放置学习笔记、项目经验总结、技能清单。</div>
-          <div class="ins-search"></div>
-        </div>
-        <div class="ins-right"></div>
-      </div>
+    <!-- 侧边栏 -->
+    <div class="sidebar">
+      
     </div>
 
-    <!-- content -->
-    <div class="whole">
-      <div class="whole-left"></div>
-      <div class="whole-right"></div>
-    </div>
     <div class="bottom">
-      <div class="bottom-transition"></div>
-      <div class="pure-bottom"></div>
+      <div class="bottom-contact ">
+        <div class="contact-title">联系方式</div>
+        <div class="contact-message">手机：13867908869</div>
+        <div class="contact-message">微信：13867908869</div>
+        <div class="contact-message">邮箱：klaus@outlook.com</div>
+      </div>
+      <div class="bottom-line "></div>
+      <div class="bottom-logo">
+        <div class="profile-pic"></div>
+      </div>
+      <div class="bottom-label">Made with ❤️ by Zanlai.</div>
     </div>
+  </div>
 </body>
 
 </html>
