--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@
 
     <div class="bottom">
       <div class="previous-title home-bottom-special"></div>
-      <div class="bottom-contact home-bottom-special">
+      <div class="bottom-contact ">
         <div class="contact-title">联系方式</div>
         <div class="contact-message">手机：13867908869</div>
         <div class="contact-message">微信：13867908869</div>
         <div class="contact-message">邮箱：klaus@outlook.com</div>
       </div>
-      <div class="bottom-line home-bottom-special"></div>
+      <div class="bottom-line"></div>
       <div class="bottom-logo">
         <div class="profile-pic"></div>
       </div>
       <div class="bottom-label">Made with ❤️ by Zanlai.</div>
-      </div>
     </div>
+  </div>
 </body>
 
 </html>
