--- a/study-notes.html
+++ b/study-notes.html
@@ -56,7 +56,15 @@
 
     <!-- 侧边栏 -->
     <div class="sidebar">
-
+      <div class="">JavaScript</div>
+      <div class="">1 什么是JavaScript</div>
+      <div class="">2 script标签</div>
+      <div class="">3 语法</div>
+      <div class="">4 var,let,const</div>
+      <div class="">5 数据类型</div>
+      <div class="">6 对象</div>
+      <div class="">7 操作符</div>
+      <div class="">8 语句</div>
     </div>
 
     <div class="bottom unhome-padding">
@@ -72,6 +80,7 @@
       </div>
       <div class="bottom-label">Made with ❤️ by Zanlai.</div>
     </div>
+
   </div>
 </body>
 
