增加超链接和右边内容

--- a/study-notes.html
+++ b/study-notes.html
@@ -56,18 +56,25 @@
 
       <!-- 侧边栏 -->
       <div class="sidebar">
-        <div class="know-name know-name-focus">JavaScript</div>
-        <div class="chapter">1 什么是JavaScript</div>
-        <div class="chapter">2 script标签</div>
-        <div class="chapter">3 语法</div>
-        <div class="chapter">4 var,let,const</div>
-        <div class="chapter">5 数据类型</div>
-        <div class="chapter">6 对象</div>
-        <div class="chapter">7 操作符</div>
-        <div class="chapter">8 语句</div>
+        <a href=""><div class="know-name know-name-focus">JavaScript</div></a>
+        <a href=""><div class="chapter">1 什么是JavaScript</div></a>
+        <a><div class="chapter">2 script标签</div></a>
+        <a><div class="chapter">3 语法</div></a>
+        <a><div class="chapter">4 var,let,const</div></a>
+        <a><div class="chapter">5 数据类型</div></a>
+        <a><div class="chapter">6 对象</div></a>
+        <a><div class="chapter">7 操作符</div></a>
+        <a><div class="chapter">8 语句</div></a>
       </div>
 
       <div class="right-content">
+        <div class="content-content">
+          <h1>JavaScript学习笔记</h1>
+          <p>主要通过《JavaScript高级程序设计》第四版和MDN进行学习。并记录下要点和学习心得。</p>
+        </div>
+
+
+
         <div class="bottom unhome-padding">
           <div class="bottom-contact">
             <div class="contact-title">联系方式</div>
