--- a/study-notes.html
+++ b/study-notes.html
@@ -70,10 +70,10 @@
       <div class="right-content">
         <div class="content-content">
           <h1>JavaScript学习笔记</h1>
-          <p>主要通过《JavaScript高级程序设计》第四版和MDN进行学习。并记录下要点和学习心得。</p>
+          <p>
+            主要通过《JavaScript高级程序设计》第四版和MDN进行学习。并记录下要点和学习心得。
+          </p>
         </div>
-
-
 
         <div class="bottom unhome-padding">
           <div class="bottom-contact">
