完成侧边栏样式

--- a/study-notes.html
+++ b/study-notes.html
@@ -56,8 +56,8 @@
 
       <!-- 侧边栏 -->
       <div class="sidebar">
-        <a href=""><div class="know-name know-name-focus">JavaScript</div></a>
-        <a href=""><div class="chapter">1 什么是JavaScript</div></a>
+        <a href="study-notes.html"><div class="know-name know-name-focus">JavaScript</div></a>
+        <a href="study-notes/JavaScript/js-1.html"><div class="chapter">1 什么是JavaScript</div></a>
         <a><div class="chapter">2 script标签</div></a>
         <a><div class="chapter">3 语法</div></a>
         <a><div class="chapter">4 var,let,const</div></a>
