增加第一章内容

--- a/study-notes/JavaScript/js-1.html
+++ b/study-notes/JavaScript/js-1.html
@@ -56,8 +56,12 @@
 
       <!-- 侧边栏 -->
       <div class="sidebar">
-        <a href="../../study-notes.html"><div class="know-name know-name-focus">JavaScript</div></a>
-        <a href=""><div class="chapter chapter-choosen">1 什么是JavaScript</div></a>
+        <a href="../../study-notes.html"
+          ><div class="know-name know-name-focus">JavaScript</div></a
+        >
+        <a href=""
+          ><div class="chapter chapter-choosen">1 什么是JavaScript</div></a
+        >
         <a href=""><div class="chapter">2 script标签</div></a>
         <a href=""><div class="chapter">3 语法</div></a>
         <a href=""><div class="chapter">4 var,let,const</div></a>
@@ -69,9 +73,33 @@
 
       <div class="right-content">
         <div class="content-content">
-          <h1>JavaScript学习笔记</h1>
+          <h1>1.什么是JavaScript</h1>
+          <h2>JavaScript 的诞生</h2>
           <p>
-            主要通过《JavaScript高级程序设计》第四版和MDN进行学习。并记录下要点和学习心得。
+            JavaScript 问世之初的主要功能是代替 perl
+            等服务端语言。在那个年代，验证输入框内容是否正确都需要与服务器进行一次往返通信。在拨号上网
+            28KB/s 的网速下，一次次刷新页面让人无法忍受。因此，网景将 JavaScript
+            加入到 navigator
+            浏览器中，从而在客户端就可以进行验证。在那个年代，这是令人兴奋的功能。
+            而现在，JavaScript
+            已经是公认的主流编程语言。它的应用也不再只是单纯的验证，而是可以实现复杂的计算与交互、闭包、匿名函数，甚至元编程等特性。几乎所有的软件和硬件设备都可以支持它。
+          </p>
+          <p>
+            网景码农 Brendan Eric 一开始将这门语言命名为
+            LiveScript，在正式发布前才被公司更改为 JavaScript，以便蹭一下 Java
+            的热度。JS 发布后收到了很多很好的评价，于是微软也将 JS
+            纳入了自家浏览器。但两家的 JS 标准不同，于是欧洲计算机制造商协会
+            Ecma 针对其制定了名为 ECMA-262 这个脚本语言标准，而 JavaScript
+            也有了另一个名字 ECMAScript（发音为 ek-ma-script）。
+          </p>
+          <p>
+            次年（1998），国际标准化组织 ISO 和国际电工委员会 IEC 也将
+            ECMAScript 采纳为标准 ISO/IEC-16262。至此，各家浏览器均以其为实现
+            JavaScript 的标准，虽然具体实现仍有不同。
+          </p>
+          <p>
+            所以，虽然一般将 JavaScript 等同为 ECMAScript。但 JavaScript
+            其实是包含了 ECMAScript 在内。
           </p>
         </div>
 
