--- a/study-notes/JavaScript/js-1.html
+++ b/study-notes/JavaScript/js-1.html
@@ -83,6 +83,8 @@
       </a>
     </div>
 
+    <div class="outline"></div>
+
     <div class="right-content">
       <div class="content-content">
         <h1>1.什么是JavaScript</h1>
