--- a/study-notes/JavaScript/js-1.html
+++ b/study-notes/JavaScript/js-1.html
@@ -147,6 +147,12 @@
         <p>5. screen</p>
         <p>6. 其他自定义对象，如 XMLHttpRequest 和 IE 的 ActiveXObject。</p>
 
+        <h2>小结</h2>
+        <p>JavaScript 是一门用来与网页交互的脚本语言。</p>
+        <p>ECMAScript:由 ECMA-262 定义并提供核心功能。</p>
+        <p>文档对象模型(DOM):提供与网页内容交互的方法和接口。</p>
+        <p>浏览器对象模型(BOM):提供与浏览器交互的方法和接口。</p>
+
       </div>
 
       <div class="bottom unhome-padding">
