--- a/study-notes/JavaScript/js-1.html
+++ b/study-notes/JavaScript/js-1.html
@@ -60,7 +60,7 @@
       <a href="">
         <div class="chapter chapter-choosen">1 什么是JavaScript</div>
       </a>
-      <a href="">
+      <a href="js-2.html">
         <div class="chapter">2 script标签</div>
       </a>
       <a href="">
