--- a/study-notes/JavaScript/js-1.html
+++ b/study-notes/JavaScript/js-1.html
@@ -57,28 +57,28 @@
       <a href="../../study-notes.html">
         <div class="know-name know-name-focus">JavaScript</div>
       </a>
-      <a href="">
+      <a href="js-1.html">
         <div class="chapter chapter-choosen">1 什么是JavaScript</div>
       </a>
       <a href="js-2.html">
         <div class="chapter">2 script标签</div>
       </a>
-      <a href="">
+      <a href="js-3.html">
         <div class="chapter">3 语法</div>
       </a>
-      <a href="">
+      <a href="js-4.html">
         <div class="chapter">4 var,let,const</div>
       </a>
-      <a href="">
+      <a href="js-5.html">
         <div class="chapter">5 数据类型</div>
       </a>
-      <a href="">
+      <a href="js-6.html">
         <div class="chapter">6 对象</div>
       </a>
-      <a href="">
+      <a href="js-7.html">
         <div class="chapter">7 操作符</div>
       </a>
-      <a href="">
+      <a href="js-8.html">
         <div class="chapter">8 语句</div>
       </a>
     </div>
