--- a/study-notes/JavaScript/js-3.html
+++ b/study-notes/JavaScript/js-3.html
@@ -58,13 +58,13 @@
         <div class="know-name know-name-focus">JavaScript</div>
       </a>
       <a href="js-1.html">
-        <div class="chapter chapter-choosen">1 什么是JavaScript</div>
+        <div class="chapter ">1 什么是JavaScript</div>
       </a>
       <a href="js-2.html">
         <div class="chapter">2 script标签</div>
       </a>
       <a href="js-3.html">
-        <div class="chapter">3 语法</div>
+        <div class="chapter chapter-choosen">3 语法</div>
       </a>
       <a href="js-4.html">
         <div class="chapter">4 var,let,const</div>
