--- a/study-notes/JavaScript/js-5.html
+++ b/study-notes/JavaScript/js-5.html
@@ -58,7 +58,7 @@
         <div class="know-name know-name-focus">JavaScript</div>
       </a>
       <a href="js-1.html">
-        <div class="chapter chapter-choosen">1 什么是JavaScript</div>
+        <div class="chapter ">1 什么是JavaScript</div>
       </a>
       <a href="js-2.html">
         <div class="chapter">2 script标签</div>
@@ -70,7 +70,7 @@
         <div class="chapter">4 var,let,const</div>
       </a>
       <a href="js-5.html">
-        <div class="chapter">5 数据类型</div>
+        <div class="chapter chapter-choosen">5 数据类型</div>
       </a>
       <a href="js-6.html">
         <div class="chapter">6 对象</div>
