--- a/study-notes/JavaScript/js-8.html
+++ b/study-notes/JavaScript/js-8.html
@@ -58,7 +58,7 @@
         <div class="know-name know-name-focus">JavaScript</div>
       </a>
       <a href="js-1.html">
-        <div class="chapter chapter-choosen">1 什么是JavaScript</div>
+        <div class="chapter ">1 什么是JavaScript</div>
       </a>
       <a href="js-2.html">
         <div class="chapter">2 script标签</div>
@@ -79,7 +79,7 @@
         <div class="chapter">7 操作符</div>
       </a>
       <a href="js-8.html">
-        <div class="chapter">8 语句</div>
+        <div class="chapter chapter-choosen">8 语句</div>
       </a>
     </div>
 
