--- a/study-notes/JavaScript/js-1.html
+++ b/study-notes/JavaScript/js-1.html
@@ -115,8 +115,7 @@
           核心 ECMAScript</br>
           文档对象模型 DOM（Document object model）</br>
           浏览器对象模型 BOM（Browser object model）</p>
-        <h2>ECMAScript、DOM、BOM</h2>
-        <h3>ECMAScript</h3>
+        <h2>ECMAScript</h2>
         <p>ECMAScript 并不局限于 web 浏览器，web 浏览器只是 ECMAScript 的一种宿主环境（host environment）。宿主环境提供 ECMAScript
           的基准实现和与环境交互必需的扩展。DOM 就是一个扩展，它使用 ECMAScript 核心类型和语法，提供特定于环境的额外功能。（其它宿主环境还有 Node.js 和 Adobe Flash。）</p>
 
@@ -125,7 +124,7 @@
           语法、类型、语句、关键字、保留字、操作符、全局对象。</p>
         <p>实现了这个规范的所有一类语言都可以称为 ECMAScript。</p>
         <p>Javascript 实现了 ECMAScript，Adobe ActionScript 也实现了 ECMAScript。</p>
-        <h3>DOM document object model 文档对象模型</h3>
+        <h2>DOM Document Object Model 文档对象模型</h2>
         <p>文档对象模型是一个应用编程接口（API），用于在 HTML 中使用扩展的 XML。DOM 将整个页面抽象成一个分层节点，创建表示文档的树。</p>
         <p>DOM 规范</p>
         <p>因为不同浏览器厂商开发的 DHTML 不同，这导致开发者写的同一个 HTML 不能在任何浏览器上都运行得很好。所以 W3C 制定了 DOM 标准。</p>
@@ -135,7 +134,7 @@
         <p>DOM 并不是只能通过 JavaScript 访问。但是对于浏览器来说，DOM 就是使用 ECMAScript 实现的。DOM 是 JavaScript 的一大组成部分。</p>
         <p>对于浏览器厂商来说，重中之重就是支持 DOM。</p>
 
-        <h3>BOM Browser Object Model 浏览器对象模型</h3>
+        <h2>BOM Browser Object Model 浏览器对象模型</h2>
         <P>BOM 是浏览器对象模型（Browser object model）API。BOM 一直没有标准。所以每个浏览器拥有自己定义的属性和方法。</P>
         <p>> HTML5 尽可能多地去正式规范了 BOM。</p>
         <p>一般来说，BOM 针对浏览器窗口和子窗口，并且特定于浏览器的扩展也被归于 BOM。开发者通过它操控浏览器显示页面之外的部分。</p>
