--- a/study-notes/JavaScript/js-2.html
+++ b/study-notes/JavaScript/js-2.html
@@ -90,6 +90,7 @@
         <h1>&lt;script&gt;标签</h1>
         <p>&lt;script&gt;元素由网景公司创造，用来将 JavaScript 引入 HTML。它也被纳入 HTML 规范。</p>
         <h2>&lt;script&gt;有 8 个属性：</h2>
+        
         <p>src：可选。填入 URL 来引入外部文件中的 JavaScript。</p>
         <p>defer：可选。延迟运行JavaScript， 可以延迟到整个页面被解析和显示之后再运行。只对外部 JavaScript 文件有效。</p>
         <p>async：可选。异步执行，表示立刻开始下载 JavaScript，但不必等 JavaScript 下载和执行完再加载页面。只对外部 JavaScript 文件有效。</p>
@@ -106,7 +107,7 @@
           CORS。crossorigin="use-credentials"意思是设置凭据标志，这样出站请求会包含凭据。crossorigin="anonymous"意思是配置文件请求不必设置凭据标志。</p>
 
         <h2>如何使用&lt;script&gt;</h2>
-        <p>1.直接在网页中嵌入：</p>
+        <h3>1.直接在网页中嵌入：</h3>
         <pre><code>
           &lt;script&gt;
             function sayHi() {
@@ -124,7 +125,7 @@
             }
           &lt;/script&gt;
         </code></pre>
-        <p>2.引入外部 JavaScript</p>
+        <h3>2.引入外部 JavaScript</h3>
         <pre><code>
           &lt;script src="example.js">&lt;/script&gt;
         </code></pre>
@@ -136,7 +137,52 @@
         <p>如果来自外部域，浏览器会向这个路径发送 GET 请求。这个请求不受浏览器同源策略限制，但返回并被执行的 JavaScript 受限制。这个请求受父页面 HTTP/HTTPS 协议的限制。</p>
         <p>来自外部域的代码会成为页面的一部分来加载和解释，所以我们可以通过不同域分发 JavaScript。但也要小心别有用心的人可能替换这个外部域JavaScript文件，这个时候就需要 Integrity
           属性来确保该域是一个可信的来源，虽然这个属性也不是所有浏览器都支持。</p>
-        
+
+        <h3>行内代码与外部文件，选择哪个?</h3>
+        <p>虽然可以直接在页面嵌入JavaScript，但通常认为最佳体验是用外部引入的方式。理由如下：</p>
+        <p>1. 可维护性。用一个目录保存所有JavaScript文件，更容易维护。HTML与JavaScript也可以分开来独立开发。</p>
+        <p>2. 缓存。浏览器会根据特定的设置缓存所有外部链接的JavaScript文件，这意味着如果两个页面都用到同一个文件，则该文件只需下载一次。 </p>
+
+        <h2>&lt;script&gt;在HTML中的位置</h2>
+        <p>曾经，流行放在head里，但是就意味着需要所有 JavaScript
+          代码都被下载、解析和解释完成后，才开始页面的渲染，浏览器在解析到&lt;body&gt;时才开始渲染页面。为了提速，JavaScript 现在流行放在&lt;body&gt;元素里的末尾。</p>
+
+        <h2>Integrity</h2>
+        <p>提供hash值，来验证览器获得的资源（例如从 CDN 获得的）是否被篡改。</p>
+        <p>需要服务器开启内容安全策略，即通过 HTTP 头信息的Content-Security-Policy的字段</p>
+        <pre><code>
+          Content-Security-Policy: require-sri-for script;
+        </code></pre>
+        <p>加入integrity值，举个例子：</p>
+        <pre><code>
+          &lt;script
+          src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"
+          integrity="sha384-9u9lzb/hr8e14GLHe5TEOrTiH3Qtw5DX2Zw9X/g7cqj81W2McEMx5CKOszxdb8jg" crossorigin="anonymous">
+          &lt;/script&gt;
+        </code></pre>
+        <p>除了对script进行校验外，还可对style进行校验。</p>
+        <p>关于Content-Security-Policy更多信息：</p>
+        <p>http://www.ruanyifeng.com/blog/2016/09/csp.html</p>
+
+        <h2>defer</h2>
+        <pre><code>
+          &lt;script defer src="">&lt;/script&gt;
+        </code></pre>
+        <p>加入 defer 后，JavaScript 会立刻下载，但会等到整个页面解析完毕后再运行。也就是在浏览器解析到&lt;/html&gt;时，才运行该脚本。</p>
+        <p>如果出现了两段被推迟的代码。HTML5 规范要求脚本按照顺序执行，第二个推迟的脚本会在第一个执行之后再执行，两者都会在 DOMContwntloaded
+          事件之前执行。不过实际中，推迟执行的脚本不一定总会按顺序执行或者在 DOMContwntloaded 事件之前执行，因此最好只包含一个这样的脚本。</p>
+
+        <h2>async</h2>
+        <pre><code>
+          &lt;script async src="">&lt;/script&gt;
+        </code></pre>
+        <p>
+          和defer类似，但是不保证按出现顺序执行。defer也会告诉浏览器立刻下载脚本。但是浏览器不必等脚本下载和执行完再加载页面，同样也不必等其他异步脚本下载和执行再执行本异步脚本。所以，异步脚本不应该在加载期间修改DOM。
+        </p>
+
+        <h2>&lt;noscript&gt;</h2>
+        <p>针对早期浏览器不支持JavaScript的情况，出现了&lt;noscript&gt;。它可以包含任何可以出现在&lt;body&lt;中的HTML元素。并且在浏览器不支持脚本或对脚本的支持被关闭时，其内容才会被渲染,否则就会直接略过。</p>
+
       </div>
 
       <div class="bottom unhome-padding">
