修改了P的样式

--- a/study-notes/JavaScript/js-1.html
+++ b/study-notes/JavaScript/js-1.html
@@ -89,25 +89,19 @@
       <div class="content-content">
         <h1>1.什么是JavaScript</h1>
         <h2>JavaScript 的诞生</h2>
-        <p>JavaScript 是一门用来与网页交互的脚本语言。它问世之初的主要功能是代替 perl等服务端语言。</p>
         <p>
-          在那个年代，验证输入框内容都需要与服务器进行一次往返通信。为了在客户端就可以进行验证，网景将 JavaScript加入到 navigator 浏览器中。
-          而现在，JavaScript已经是公认的主流编程语言，可以实现复杂的计算与交互。几乎所有软件和硬件都支持它。
-        </p>
-        <p>
-          创造者 Brendan Eric 一开始将其命名为
-          LiveScript，在正式发布前被网景更名 JavaScript，以便蹭一下 Java
-          的热度。JS 发布后收到很好的评价，于是微软也为自家浏览器添加 JS
-          ，但两家的 JS 标准不同。</p>
-        <p>欧洲计算机制造商协会
+          JavaScript 是一门用来与网页交互的脚本语言。它问世之初的主要功能是代替 perl等服务端语言。<br><br>
+          在那个年代，验证输入框内容都需要与服务器进行一次往返通信。为了在客户端就可以进行验证，网景将 JavaScript加入到 navigator
+          浏览器中。而现在，JavaScript已经是公认的主流编程语言，可以实现复杂的计算与交互。几乎所有软件和硬件都支持它。<br><br>
+          创造者 Brendan Eric 一开始将其命名为LiveScript，在正式发布前被网景更名 JavaScript，以便蹭一下 Java的热度。JS 发布后收到很好的评价，于是微软也为自家浏览器添加 JS，但两家的
+          JS 标准不同。<br><br>
+          欧洲计算机制造商协会
           Ecma 为了统一标准制定了 ECMA-262 （一个脚本语言标准），至此 JavaScript
           有了别名： ECMAScript（发音：
           ek-ma-script）。次年（1998），国际标准化组织 ISO 和国际电工委员会
           IEC 也将 ECMAScript 采纳为标准
           ISO/IEC-16262。从此，各家浏览器均以其为实现 JavaScript
-          的标准，虽然具体实现仍有不同。
-        </p>
-        <p>
+          的标准，虽然具体实现仍有不同。<br><br>
           所以，虽然一般将 JavaScript 等同为 ECMAScript。但 JavaScript
           其实是包含 ECMAScript 在内。
         </p>
